# cnctd_server

./: CLAUDE.md  Cargo.toml  MIGRATION_PHASE1.md  PHASE2_IMPLEMENTATION.md  PHASE2_TODO.md  README.md
src/: handlers.rs  lib.rs  message.rs  response.rs  router.rs  server.rs  server_info.rs  socket.rs  utils.rs
src/auth/: mod.rs
src/graphql/: mod.rs
src/router/: error.rs  error_.rs  message.rs  mod.rs  request.rs  response.rs
src/server/: axum_server.rs  extractors.rs  handlers.rs  mod.rs  server_info.rs
src/socket/: axum_socket.rs  client.rs  mod.rs
src/utils/: mod.rs  rsa_signer.rs  signed_cookie.rs
