[package]
name = "cnctd_server"
version = "0.4.2"
edition = "2021"
authors = ["Connected Dot Inc.", "Kyle Ebner <kyle@cnctd.world>"]
description = "Collection of server APIs"
repository = "https://github.com/Connected-Dot/cnctd_server"
license = "MIT"
keywords = ["module"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
# async-graphql = "7.0.3"
# async-graphql-warp = "7.0.3"
chrono = { version = "0.4.37", features = ["serde"]}
cnctd_aws = "0.1.5"
cnctd_redis = { version = "0.1.7" }
# cnctd_redis = { version = "0.1.4", path = "../cnctd_redis" }
futures-util = "0.3.30"
hmac = "0.12.1"
jwt = "0.16.0"
local-ip-address = "0.6.1"
public-ip = "0.2.2"
r2d2 = "0.8.10"
r2d2_redis = "0.14.0"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.115"
sha2 = "0.10.8"
state = "0.6.0"
sys-info = "0.9.1"
tokio = { version = "1.37.0", features = ["full"] }
tokio-stream = "0.1.15"
uuid = { version = "1.8.0", features = ["v4"]}
warp = "0.3.7"
