[package]
name = "cnctd_server"
version = "0.4.7"
edition = "2021"
authors = ["Connected Dot Inc.", "Kyle Ebner <kyle@cnctd.world>"]
description = "Collection of server APIs"
repository = "https://github.com/Connected-Dot/cnctd_server"
license = "MIT"
keywords = ["module"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.93"
# async-graphql = "7.0.3"
# async-graphql-warp = "7.0.3"
chrono = { version = "0.4.38", features = ["serde"]}
# cnctd_aws = "0.1.9"
cnctd_redis = { version = "0.1.7" }
# cnctd_redis = { version = "0.1.4", path = "../cnctd_redis" }
futures-util = "0.3.31"
hmac = "0.12.1"
jwt = "0.16.0"
local-ip-address = "0.6.3"
public-ip = "0.2.2"
r2d2 = "0.8.10"
r2d2_redis = "0.14.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
sha2 = "0.10.8"
state = "0.6.0"
sys-info = "0.9.1"
tokio = { version = "1.41.1", features = ["full"] }
tokio-stream = "0.1.16"
uuid = { version = "1.11.0", features = ["v4"]}
# Keep warp for now during migration
warp = "0.3.7"

# Axum and Tower ecosystem for migration
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }
hyper = { version = "1.5", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio"] }
async-trait = "0.1"
